Resolve clipping of icon when details revealed

--- a/Survey/source/styles/formal/_o-message.scss
+++ b/Survey/source/styles/formal/_o-message.scss
@@ -79,6 +79,7 @@ details[open] summary:after {
         content: '';
         background-image: url("/Survey/images/formal/icon-information.svg");
         background-repeat: no-repeat;
+        z-index: 2;
     }
 
     p {
