--- a/Survey/styles/informal/base.css
+++ b/Survey/styles/informal/base.css
@@ -1520,6 +1520,7 @@ details[open] summary:after {
   content: "";
   background-image: url("../../images/informal/icon-information.svg");
   background-repeat: no-repeat;
+  z-index: 2;
 }
 .m-message-instruction.has-content div p,
 .o-message-information.has-content p {
